# reels-downloader-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COOKIES_GUIDE.md  Dockerfile  README.md  README_RU.md  SECURITY.md  docker-compose.local.yml  docker-compose.yml  env.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
src/: __init__.py  config.py  main.py
src/bot/: __init__.py  commands.py
src/bot/handlers/: __init__.py  admin.py  common.py  download.py  download_cmd.py  gif.py  inline.py  language.py  mp3.py  round.py  voice.py
src/bot/middlewares/: __init__.py  access.py
src/locales/: __init__.py  en.json  en.py  ru.json  ru.py
src/services/: __init__.py  database.py  downloader.py  i18n.py  url_utils.py  youtube_search.py
tests/: conftest.py
tests/unit/: _helpers.py  test_carousel.py  test_commands.py  test_config.py  test_config_extra.py  test_database.py  test_downloader.py  test_downloader_extra.py  test_gif_encode.py  test_handlers_admin.py  test_handlers_common.py  test_handlers_conversion.py  test_handlers_conversion_extra.py  test_handlers_download.py  test_handlers_download_cmd.py  test_handlers_init.py  test_handlers_inline.py  test_handlers_language.py  test_i18n.py  test_i18n_extra.py  test_main.py  test_middleware.py  test_url_utils.py  test_url_utils_extra.py  test_youtube_search.py
